--- a/distant/templates/distant/info.html
+++ b/distant/templates/distant/info.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 <div class="info-page">
-    <p>Сайт создан в учебных целях.</p>
-    <h1>Данный сайт не даёт 100% вероятности в правильности ответов!!!</h1>
+    <h1>Сайт создан в учебных целях.</h1>
+    <p>Данный сайт не даёт 100% вероятности в правильности ответов!!!</p>
     <!-- <img src="{% static 'images/warning.png' %}" alt="" class='warning'> -->
 </div>
 {% endblock %}
