--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,3 +1,13 @@
+* {
+    font-family: 'Montserrat', sans-serif;
+}
+
+input {
+    padding: 7px;
+    border-radius: 40px;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .main {
     flex-direction: column;
 }
@@ -6,26 +16,30 @@
     background-color: rgba(0, 0, 0, 0.6);
     border: 1px solid black;
     border-radius: 20px;
-    padding: 10px 30px;
-    margin: 0 5%;
+    padding: 10px 0;
+    margin-left: 30px;
+}
+
+.content button {
+    cursor: pointer;
 }
 
 h1 {
-    color: rgb(99, 31, 145);
+    color: white;
     margin-bottom: 10px;
 }
 
 a {
-    color: inherit;
+    color: white;
     font-size: inherit;
 }
 
 .social {
+    margin-top: 20px;
     display: inline-block;
-    border: 1px solid black;
-    border-radius: 20px;
-    background-color: #fff;
-    padding: 5px;
+    border: 1px solid white;
+    border-radius: 40px;
+    background-color: transparent;
     font-size: 20px;
     color: #7023c5;
     font-weight: bold;
@@ -37,7 +51,6 @@ a {
     display: inline-block;
     font-size: 26px;
     border-radius: 50%;
-    padding: 8px;
     margin: 10px;
     width: 50px;
     height: 50px;
@@ -93,17 +106,12 @@ a {
     border-color: snow;
     background: rgb(131,58,180);
     background: linear-gradient(112deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(69,252,93,1) 100%);
-    color: rgb(52 168 83);
+    color: white;
 }
 
 .steer {
-    margin: 4px;
-    color: rgb(167, 79, 226);
+    color: white;
     font-size: 18px;
-}
-
-.steer a {
-    color: rgb(92, 40, 94);
 }
 
 .steer a:hover {
@@ -118,10 +126,10 @@ a {
 .label {
     display: inline-block;
     color: rgb(174, 39, 192);
-    font-size: 19px;
+    font-size: 18px;
     width: 155px;
-    margin: 5px;
-    padding-left: 5px;
+    margin: 10px 0;
+    color: white;
 }
 
 .input {
@@ -195,17 +203,15 @@ a.support:hover .tip {
 }
 
 button {
+    background-color: transparent;
     font-size: 18px;
-    padding: 8px;
-    border-radius: 5px;
+    padding: 8px 26px;
+    border: 1px solid #fff;
+    border-radius: 40px;
+    color: #fff;
 }
 
-button:hover {
-    background-color: rgb(88, 12, 88);
-    color: rgb(93, 160, 54);
-}
-
-.login {
+.logining {
     color: rgb(61, 32, 52);
     font-size: 18px;
     text-decoration: none;
@@ -213,4 +219,30 @@ button:hover {
 
 .login:hover {
     color: rgb(124, 75, 116);
+}
+
+.primaryAction {
+    margin-top: 10px;
+}
+
+.secondaryAction {
+    margin-left: 10px;
+    color: white;
+}
+
+.fa {
+    position: relative;
+    top: 8px;
+}
+
+.fa-vk {
+    left: -1px;
+}
+
+.fa-google {
+    right: -1px;
+}
+
+.unit button {
+    margin-top: 10px;
 }
