--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,6 +25,7 @@ main {
 
 footer {
     color: #fff;
+    text-align: center;
 }
 
 .container {
@@ -97,4 +98,39 @@ footer {
     transition: 0.5s
     background-color: white;
     color: black;
+}
+
+// Extra small devices (portrait phones, less than 576px)
+@media screen (max-width: 575.98px) {
+    .container {
+        display: none;
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media screen (min-width: 576px) and (max-width: 767.98px) {
+    .container {
+        width: 540px;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media screen (min-width: 768px) and (max-width: 991.98px) {
+    .container {
+        width: 720px;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media screen (min-width: 992px) and (max-width: 1199.98px) {
+    .container {
+        width: 960px;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media screen (min-width: 1200px) {
+    .container {
+        width: 1140px;
+    }
 }
